--- a/spring-boot/src/main/resources/application.properties
+++ b/spring-boot/src/main/resources/application.properties
@@ -1,6 +1,8 @@
 server.port=8080
 spring.jpa.hibernate.ddl-auto=update
 
+welcome.message=Some Configuration Data
+
 #spring.h2.console.enabled=true
 #spring.datasource.url=jdbc:h2:mem:dcbapp
 #spring.datasource.driver-class-name=org.h2.Driver
