--- a/spring-boot/src/main/resources/application.properties
+++ b/spring-boot/src/main/resources/application.properties
@@ -1,17 +1,17 @@
-server.port=8080
-spring.jpa.hibernate.ddl-auto=update
-
-welcome.message=Some Configuration Data
-
-#spring.h2.console.enabled=true
-#spring.datasource.url=jdbc:h2:mem:dcbapp
-#spring.datasource.driver-class-name=org.h2.Driver
-#spring.datasource.username=sa
-#spring.datasource.password=password
-#spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
-
-spring.datasource.url=jdbc:mysql://localhost:3306/dcbapp
-spring.datasource.username=root
-spring.datasource.password=123123
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.jpa.show-sql=true
+#server.port=8080
+#spring.jpa.hibernate.ddl-auto=update
+#
+#welcome.message=Some Configuration Data
+#
+##spring.h2.console.enabled=true
+##spring.datasource.url=jdbc:h2:mem:dcbapp
+##spring.datasource.driver-class-name=org.h2.Driver
+##spring.datasource.username=sa
+##spring.datasource.password=password
+##spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+#
+#spring.datasource.url=jdbc:mysql://localhost:3306/dcbapp
+#spring.datasource.username=root
+#spring.datasource.password=123123
+#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+#spring.jpa.show-sql=true
