--- a/spring-boot/src/main/resources/application.yml
+++ b/spring-boot/src/main/resources/application.yml
@@ -2,15 +2,60 @@ server:
   port: 8080
 
 spring:
+  config:
+    activate:
+      on-profile: qa
+
+---
+
+spring:
+  config:
+    activate:
+      on-profile: dev
   datasource:
-    driver-class-name: com.mysql.cj.jdbc.Driver
-    username: root
-    url: jdbc:mysql://localhost:3306/dcbapp
+    driver-class-name: com.mysql.jdbc.Driver
     password: 123123
+    url: jdbc:mysql://localhost:3306/dcbapp
+    username: root
   jpa:
     hibernate:
       ddl-auto: update
     show-sql: true
 welcome:
-  message: Some Configuration Data
+  message: Welcome to Shounoop!!
 
+---
+
+spring:
+  config:
+    activate:
+      on-profile: qa
+  datasource:
+    driver-class-name: com.mysql.jdbc.Driver
+    password: 123123
+    url: jdbc:mysql://localhost:3306/dcbapp-qa
+    username: root
+  jpa:
+    hibernate:
+      ddl-auto: update
+    show-sql: true
+welcome:
+  message: Welcome to Shounoop!!
+
+---
+
+spring:
+  config:
+    activate:
+      on-profile: prod
+  datasource:
+    driver-class-name: com.mysql.jdbc.Driver
+    password: 123123
+    url: jdbc:mysql://localhost:3306/dcbapp-prod
+    username: root
+  jpa:
+    hibernate:
+      ddl-auto: update
+    show-sql: true
+welcome:
+  message: Welcome to Shounoop!!
