spring-boot: spring boot actuator

--- a/spring-boot/src/main/resources/application.yml
+++ b/spring-boot/src/main/resources/application.yml
@@ -42,6 +42,12 @@ spring:
 welcome:
   message: Welcome to Shounoop!!
 
+management:
+  endpoints:
+    web:
+      exposure:
+        include: "*"
+        exclude: "env,beans"
 ---
 
 spring:
